fixed contact spacing issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -77,6 +77,7 @@ body::before{
   width: 100%;
   z-index: -1;
   background-image: url('../images/background.jpg');
+  opacity: 0.45;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
